--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ a{
     z-index: 10;
 }
 .hero1{
-    height: 145vh;
+    height: 120vh;
     min-height: 500px;
     background-size: cover;
     background-position: center;
@@ -193,17 +193,10 @@ a{
     z-index: 10;
 }
 .hero2{
-    height: 145vh;
+    height: 100vh;
     min-height: 500px;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    position: initial;
-    z-index: 10;
-    background-color: rgba(255,255,255,.7);
-    transform: translate(0%, 10%);
+    background-color: #222831;
 }
-
 
 .hero.overlay::before {
     content: "";
@@ -367,8 +360,7 @@ p{
     transform: rotate(90deg);
     transform: translate(20%, 0%);
     align-self: flex-end;
-    position: sticky;
-    top: 80px;
+    position: relative;
 }
 
 .flecha{
@@ -468,7 +460,29 @@ h3{
     margin-bottom: 0.5rem;
 }
 
+
 .titular::before{
+    position: absolute;
+    content: "";
+    width: 10px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    background: #fd680e;
+}
+
+.titular1{
+    color: #fff;
+    font-size: 25px;
+    position: relative;
+    padding-left: 30px;
+    font-weight: 700;
+    margin-bottom: -10px;
+    margin-top: 120px;
+    top: 50;
+}
+
+.titular1::before{
     position: absolute;
     content: "";
     width: 10px;
@@ -553,6 +567,7 @@ h3{
     right: 30px;
 }
 
+
 .h3Noticia{
     font-size: 1.17em;
     font-weight: 700;
@@ -565,6 +580,8 @@ h3{
     margin-inline-start: 0px;
     margin-inline-end: 0px;
 }
+
+
 
 
 
