--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ a{
     z-index: 10;
 }
 .hero1{
-    height: 120vh;
+    height: 100vh;
     min-height: 500px;
     background-size: cover;
     background-position: center;
@@ -367,11 +367,28 @@ p{
     max-width: 56px;
     max-height: 56px;
     margin-right: -30px;
+    
 }
 .flecha2{
     max-width: 56px;
     max-height: 56px;
     transform: rotate(180deg);
+}
+
+.flecha12{
+    max-width: 56px;
+    max-height: 56px;
+    margin-right: -30px;
+    margin-top: 0;
+    margin-bottom: 0;
+    
+}
+.flecha13{
+    max-width: 56px;
+    max-height: 56px;
+    transform: rotate(180deg);
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .team1{
@@ -506,6 +523,16 @@ h3{
     display: flex;
     flex-wrap: wrap;
     box-sizing: border-box;
+    
+}
+
+.sticky {
+    position: sticky;
+    top: 0;
+    background-color: rgba(255, 255, 0, 0);
+    padding: 30px;
+    font-size: 20px;
+    text-align: center;
 }
 
 .noticiaAnterior{
