--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,8 @@ html{
 }
 
 
+
+
 /* Navegador Princial */
 
 .siteWarp{
@@ -533,6 +535,7 @@ h3{
     padding: 30px;
     font-size: 20px;
     text-align: center;
+    z-index: 100000;
 }
 
 .noticiaAnterior{
