--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,6 @@ html{
     }
 }
 
-
-
-
 /* Navegador Princial */
 
 .siteWarp{
@@ -62,15 +59,21 @@ html{
 }
 
 
-
 .navBar{
     display: flex !important;
     align-items: center !important;
     -webkit-box-align: center !important;
 }
 
+.backSticky{
+    height: 210vh;
+    width: 120px;
+    background-color: rgba(255, 166, 0, 0);
+    position: absolute;
+}
+
+
 .logo{
-    position: relative;
     font-weight: 900;
     font-size: 2.3rem;
     transition: color;
@@ -79,12 +82,17 @@ html{
     transition-delay: 0s;
     cursor: pointer;
     color: rgb(255, 255, 255);
-    position: fixed;
+    position: sticky;
+    top: 30px;
+    left: 0px;
+    z-index: 111;
 }
 
 .esport{
-    position: fixed;
     margin-left: 115px;
+    position: sticky;
+    top: 30px;
+    z-index: 111;
 }
 
 .logoLink{
@@ -210,18 +218,25 @@ a{
     bottom: 0;
 }
 
+.backSticky1{
+    height: 180vh;
+    width: 1200px;
+    background-color: rgba(255, 166, 0, 0);
+    position: absolute;
+}
+
 .row{
-    height: 100vh;
-    min-height: 500px;
+
     -webkit-box-align: center!important;
     align-items: center!important;
     margin-right: -15px;
     margin-left: -15px;
-    position: fixed;
+    position: sticky;
+    top: 30vh;
 }
 
 .col{
-    margin-left: 70%;
+    margin-left: 55%;
     margin-top: 17%;
     -webkit-box-flex: 0;
     max-width: 50%;
@@ -378,16 +393,16 @@ p{
 }
 
 .flecha12{
-    max-width: 56px;
-    max-height: 56px;
+    max-width: 75px;
+    max-height: 75px;
     margin-right: -30px;
     margin-top: 0;
     margin-bottom: 0;
     
 }
 .flecha13{
-    max-width: 56px;
-    max-height: 56px;
+    max-width: 75px;
+    max-height: 75px;
     transform: rotate(180deg);
     margin-top: 0;
     margin-bottom: 0;
@@ -530,12 +545,15 @@ h3{
 
 .sticky {
     position: sticky;
-    top: 0;
+    top: 40vh;
+    left: 0;
     background-color: rgba(255, 255, 0, 0);
-    padding: 30px;
-    font-size: 20px;
-    text-align: center;
+    padding-bottom: 30px;
+    padding-right: 200px;
+    text-align: right;
     z-index: 100000;
+    background-color: #fd6a0e00;
+    transform: translate(0px, -28vh);
 }
 
 .noticiaAnterior{
