--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
     font-weight: 300;
     background-color: #222831;
     font-size: 16px;
-    font-family: "Montserrat";
+    font-family: 'myFirstFont', sans-serif;
 }
 
 html{
@@ -83,7 +83,7 @@ html{
     cursor: pointer;
     color: rgb(255, 255, 255);
     position: sticky;
-    top: 30px;
+    top: 3vh;
     left: 0px;
     z-index: 111;
 }
@@ -193,17 +193,6 @@ a{
     position: initial;
     z-index: 10;
 }
-.hero1{
-    height: 100vh;
-    min-height: 500px;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    position: initial;
-    z-index: 10;
-}
-
-
 .hero.overlay::before {
     content: "";
     position: fixed;
@@ -213,30 +202,38 @@ a{
     right: 0;
     bottom: 0;
 }
+.hero1{
+    height: 105vh;
+    min-height: 500px;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    position: initial;
+    z-index: 10;
+}
+
+
 
 .backSticky1{
-    height: 180vh;
+    height: 178vh;
     width: 1200px;
     background-color: rgba(255, 166, 0, 0);
     position: absolute;
 }
 
 .row{
-
     -webkit-box-align: center!important;
     align-items: center!important;
     margin-right: -15px;
     margin-left: -15px;
     position: sticky;
-    top: 30vh;
+    top: 25vh;
 }
 
 .col{
     margin-left: 55%;
-    margin-top: 17%;
     -webkit-box-flex: 0;
-    max-width: 50%;
-    width: 100%;
+    max-width: 40%;
     padding-right: 15px;
     padding-left: 15px;
 }
@@ -388,21 +385,7 @@ p{
     transform: rotate(180deg);
 }
 
-.flecha12{
-    max-width: 75px;
-    max-height: 75px;
-    margin-right: -30px;
-    margin-top: 0;
-    margin-bottom: 0;
-    
-}
-.flecha13{
-    max-width: 75px;
-    max-height: 75px;
-    transform: rotate(180deg);
-    margin-top: 0;
-    margin-bottom: 0;
-}
+
 
 .team1{
     padding: 30px;
@@ -543,23 +526,36 @@ h3{
     position: sticky;
     top: 40vh;
     left: 0;
-    background-color: rgba(255, 255, 0, 0);
-    padding-bottom: 30px;
-    padding-right: 200px;
+    max-height: 0px;
+    background-color: rgba(155, 155, 33, 0);
     text-align: right;
+    padding-right: 26vh;
     background-color: #fd6a0e00;
-    transform: translate(-1vh, -28vh);
+
+    z-index: 10;
 }
 
-.fan{
-    height: 55.7vh;
+.stickyFan{
+    transform: translate(160vh, -35vh);
+    height: 58vh;
     background-color: #fd6a0e00;
     position: absolute;
-    width: 100%;
-    z-index: 100000000;
 }
-
-
+.flecha12{
+    max-width: 75px;
+    max-height: 75px;
+    margin-right: -30px;
+    margin-top: 0;
+    margin-bottom: 0;
+    
+}
+.flecha13{
+    max-width: 75px;
+    max-height: 75px;
+    transform: rotate(180deg);
+    margin-top: 0;
+    margin-bottom: 0;
+}
 
 .noticiaAnterior{
     padding-right: 0;
@@ -597,21 +593,17 @@ h3{
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 1;
+    z-index: 100;
+    background: #fd6a0e00;
+    transition-duration: .15s;
+    transition-timing-function: ease-in-out;
+    transition-delay: 0s;
+    cursor: pointer;
 }
 
-/* .textoNoticia::before{
-    content: "";
-    position: absolute;
-    top: 0;
-    z-index: -1;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    transition: .3s all ease;
-    background: rgba(0, 0, 0, 0.4);
-    box-sizing: border-box;
-} */
+.textoNoticia:hover{
+    background: #8f4517b2;
+}
 
 .tituloNoticia{
     position: absolute;
