--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
     font-weight: 300;
     background-color: #222831;
     font-size: 16px;
-    font-family: 'myFirstFont', sans-serif;
+    font-family: pp_pangram_sansbold;
 }
 
 html{
